hello-service/src/main/kubefiles/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: quarkus-hello-demo
  labels:
    name: quarkus-hello-demo
