hello-service/src/main/kubefiles/node-port.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: hello-app
