hello-service/src/main/kubefiles/ingress-alb.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
  namespace: quarkus-hello-demo
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: hello-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: hello-service
              servicePort: 8080
